# vibe-agency

./: .env.template  .flake8  .gitignore  .knowledge_index.yaml  .markdownlintignore  .pre-commit-config.yaml  .session_handoff.json  .yamllint  AGENCY_OS_DEEP_DIVE_REPORT.md  AGENTS_START_HERE.md  ARCH-012-B_COMPLETION_REPORT.md  ARCH-012_CLEANUP_REPORT.md  ARCH-040_ACTIVATION.md  ARCH-041_VALIDATION_REPORT.md  ARCHITECTURE_AUDIT_REPORT.md  ARCHITECTURE_CLEANUP_DONE.md  ARCHITECTURE_V2.md  ARCH_037_LATE_BINDING_VALIDATION_REPORT.md  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_WORKFLOW.md  CLAUDE_SESSION_GUIDE.md  COMPOSED_PROMPT.md  COMPOSED_PROMPT_EXAMPLE.md  COMPOSED_PROMPT_REGISTRY_TEST.md  COMPREHENSIVE_TEST_RESULTS.md  CONTENT_GAPS_FOUND.md  CONTEXT_SUMMARY_FOR_LEAD_ARCHITECT.md  CONTRIBUTING.md  CRITICAL_ANALYSIS_2025-11-19.md  DEFENSE_STRATEGY_UV.md  DEFENSE_VALIDATION_REPORT.md  DOCS_SYNC_COMPLETE.md  DOCUMENTATION_CLEANUP_PLAN.md  E2E_TEST_REPORT.md  EMERGENCY_TRIAGE_2025-11-20.md  EXTERNAL_REVIEW_REPORT.md  FINAL_SUMMARY.md  FOUNDATION_ASSESSMENT.md  GAP_ANALYSIS_REALITY_CHECK_2025-11-20.md  (+70 more)
.claude/: settings.local.json.template
.devcontainer/: devcontainer.json
.githooks/: post-commit  post-push
.github/: CODEOWNERS  PR_BODY.md
.github/workflows/: test-google-api.yml  test-google-provider.yml  test-secrets.yml  test.yml  trigger-research-sync.yml  validate.yml
agency_os/: agents
agency_os/01_interface/: __init__.py
agency_os/02_knowledge/: retriever.py
agency_os/02_orchestration/: __init__.py  task_executor.py
agency_os/03_agents/: __init__.py  base_agent.py  base_specialist.py  planning_specialist.py  registry.py
agency_os/config/: phoenix.py
agency_os/persistence/: __init__.py  sqlite_store.py
apps/agency/: cli.py  prompts.py
apps/vibe-monitor/: README.md  app.py
artifacts/planning/: feature_spec.json  feature_spec_v1.0_FINAL.json  phase_03_feasibility.json  phase_04_gap_detection.json  phase_05_scope_negotiation.json
artifacts/reports/: AUDIT_2025_11_19.md
artifacts/research/: anomaly_report_20251119_235858.json
config/: base.yaml  dev.yaml  legacy_config_loader.py  prod.yaml  soul.yaml  vibe_config.py  vibe_config.yaml
data/: vibe.db
docs/: AGENCY_OS_DEEP_DIVE_ANALYSIS.md  AGENCY_OS_DEEP_DIVE_REPORT.md  AGENCY_OS_FUNDAMENTAL_UNDERSTANDING.md  API_KEY_MANAGEMENT.md  DATAFLOW_ANALYSIS.md  EXECUTIVE_SUMMARY_2025-11-18.md  GLOSSARY.md  GOVERNANCE_MODEL.md  GRAND_SYSTEM_AUDIT.md  PROJECT_HEALTH_AUDIT.md  PROJECT_STATUS.md  ROADMAP.yaml  STRATEGIC_PLAN_2025-11-18.md  cleanup_roadmap.json
docs/analysis/: HANDOFF_PROTOCOL_OPTIMIZATION_REPORT.md  LEAN_OPTIMIZATION_OPPORTUNITIES.md
docs/architecture/: ARCH-032_UNIFIED_ENTRY_POINT.md  ARCH-033_REAL_BRAIN.md  ARCH-051_STEWARD_CARTRIDGE.md  ARCHITECTURE_CURRENT_STATE.md  ARCHITECTURE_GAP_ANALYSIS.md  ARCHITECTURE_MAP.md  ARCHITECTURE_V3_OS.md  BOOT_SEQUENCE_KERNEL_REDESIGN.md  CRITICAL_PATH_ANALYSIS.yaml  CURRENT_VISION_LOCK.md  EXECUTION_MODE_STRATEGY.md  GAD-000_COMPLIANCE_AUDIT.md  GAD-001_Research_Integration.md  GAD-001_VERIFICATION_HARNESS.md  GAD-002_Core_SDLC_Orchestration.md  GAD-003_IMPLEMENTATION_STATUS.md  GAD-005-ADDITION_FINAL_V2.md  GAD-005_Runtime_Engineering.md  GAD-006_KNOWLEDGE_DEPT_VISION.md  GAD-007_STEWARD_GOVERNANCE_VISION.md  GAD-008_INTEGRATION_MATRIX_VISION.md  GAD_IMPLEMENTATION_STATUS.md  GIT_BRANCH_STRATEGY.md  INDEX.md  KERNEL_AGENCY_SPLIT_PLAN.md  MIGRATION_COMPLETE.md  Masterprompt-SENIOR-WORKFLOW-FOUNDATION.md  PLAYBOOK_AOS_INTEGRATION.md  PLAYBOOK_AOS_INTEGRATION_SUMMARY.md  PROMPT_FOR_BUILDER.md  README.md  ROADMAP_HYBRID_INTEGRATION.md  SPECIALIST_AGENT_CONTRACT.md  STRUCTURE.md  SYSTEM_DATA_FLOW_MAP.yaml  VISION_6D_HEXAGON.md
docs/archive/: AGENTS_START_HERE.md  CLEANUP_COMPLETION_REPORT.md  CONTRIBUTING.md  DOCUMENTATION_REALITY_CHECK.md  FINAL_STATE_REPORT.md  HOW_TO_SELF_HEAL.md  PRE_FLIGHT_REPORT.md  README.md  RELEASE_NOTES.md  SYNC_TO_RESEARCH.md  TODO_TEST_FIXTURES.md  daily_update.md  gad_restructuring_plan_completed.md
docs/chores/: ROOT_CLEANUP_PLAN.md
docs/code/: hybrid_interface.py
docs/gad/: GAD-509_Tool_Safety_Guard.md
docs/guides/: CLAUDE_CODE_WORKFLOW.md  CLAUDE_SESSION_GUIDE.md  DELEGATED_EXECUTION_GUIDE.md
lib/: __init__.py  vibe_config.py
reports/: SCHEMA_AUDIT_REPORT.md
scripts/: arch_041_factory_run.py  bootstrap_mission.py  bootstrap_phase3.py  debug_config.py  generate-integrity-manifest.py  generate_anomaly_report.py  genesis.py  live_test.sh  prove_intelligence.py  prove_research_works.py  run_research.py  semantic_audit.py  simulate_workflow.py  test_context_injection.py  test_iron_dome.py  validate_knowledge_index.py  validate_research_tools.py  verify-system-integrity.py  verify_full_stack.py  workspace_utils.py
test_workspace_golden/: project_manifest.json  test_prompt_registry.py
tests/: conftest.py  manual_planning_test.py  smoke_test_arch003_migration.py  test_anthropic_provider.py  test_arch_010_repair_loop.py  test_archive.py  test_base_agent.py  test_batch_operations.py  test_boot_mode.py  test_canonical_schemas.py  test_coding_workflow.py  test_core_orchestrator_tools.py  test_crew_assembly.py  test_deep_analysis.py  test_deployment_workflow.py  test_equivalence.py  test_executor.py  test_file_based_delegation.py  test_full_planning_execution.py  test_google_provider.py  test_human_provider.py  test_hybrid_polymorphism.py  test_identity.py  test_integration_registry.py  test_integration_workflow.py  test_introspection.py  test_invariant_checker.py  test_kernel_checks.py  test_kernel_phase4.py  test_layer0_integrity.py  test_layer1_boot_integration.py  test_legacy_loader.py  test_motd.py  test_multi_layer_integration.py  test_neural_link.py  test_next_task_generator.py  test_orchestrator_file_delegation.py  test_orchestrator_integration.py  test_orchestrator_state_machine.py  test_orchestrator_vibe_config.py  (+30 more)
tools/: schema_auditor.py
vibe_core/: __init__.py  agent_protocol.py  identity.py  introspection.py  kernel.py  ledger.py
workspace/: BACKLOG.md
workspaces/: .workspace_index.yaml
(+686 files in other folders)
