[project]
name = "vibe-agency"
version = "1.0.0"
description = "File-based prompt framework for AI-assisted software project planning"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

authors = [
    { name = "vibe-agency team" }
]

# Dependencies from requirements.txt
dependencies = [
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "google-api-python-client>=2.100.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "ruff>=0.1.0",
    "isort>=5.13.0",
    "yamllint>=1.35.0",
    "mypy>=1.7.0",
    "jsonschema>=4.17.0",
]

security = [
    "pip-audit>=2.6.0",
    "detect-secrets>=1.4.0",
]

hooks = [
    "pre-commit>=3.6.0",
]

# Install all extras with: uv sync --extra dev --extra security --extra hooks
all = [
    "vibe-agency[dev,security,hooks]",
]

[project.scripts]
vibe-cli = "vibe_cli:main"

# ============================================================================
# TOOL CONFIGURATIONS (Consolidated from .flake8, ruff.toml, etc.)
# ============================================================================

[tool.ruff]
line-length = 100
target-version = "py311"

# Ruff replaces: flake8, isort, black, bandit, etc.
[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "I",     # isort (import sorting)
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "UP",    # pyupgrade
    "S",     # flake8-bandit (security)
    "RUF",   # ruff-specific rules
    "C90",   # mccabe complexity
]

ignore = [
    "E501",  # line-too-long (handled by formatter)
    "S101",  # assert-used (OK in tests)
]

# Complexity checks (stricter than flake8's max-complexity=10)
[tool.ruff.lint.mccabe]
max-complexity = 15

# Per-file ignores
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E402", "S101"]  # Allow late imports and asserts in tests
"test_*.py" = ["E402", "S101"]
"*-cli.py" = ["E402"]  # CLI scripts may need path manipulation

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ============================================================================
# PYTEST CONFIGURATION
# ============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# ============================================================================
# MYPY CONFIGURATION (Type Checking)
# ============================================================================

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start lenient, tighten gradually
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

# Gradually enable strict mode per module
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ============================================================================
# BLACK CONFIGURATION (Code Formatting)
# ============================================================================

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # Defaults
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# ============================================================================
# ISORT CONFIGURATION (Import Sorting)
# ============================================================================

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# ============================================================================
# COVERAGE CONFIGURATION
# ============================================================================

[tool.coverage.run]
source = ["agency_os"]
omit = [
    "tests/*",
    "**/__pycache__/*",
    "**/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# ============================================================================
# UV CONFIGURATION
# ============================================================================

[tool.uv]
dev-dependencies = []  # Managed via [project.optional-dependencies]

# ============================================================================
# BUILD SYSTEM
# ============================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agency_os", "lib"]
